--- a/Chapter24.Rmd
+++ b/Chapter24.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SDM4 in R: Comparing Counts (Chapter 24)"
 author: "Nicholas Horton (nhorton@amherst.edu)"
-date: "March 15, 2016"
+date: "April 12, 2016"
 output: 
   pdf_document:
     fig_height: 2.8
@@ -19,7 +19,7 @@ output:
 # Don't delete this chunk if you are using the mosaic package
 # This loads the mosaic and dplyr packages
 require(mosaic)
-options(digits=3)
+options(digits=5)
 ```
 
 ```{r, include=FALSE}
@@ -49,6 +49,58 @@ This work leverages initiatives undertaken by Project MOSAIC (http://www.mosaic-
 
 ### Section 24.1: Goodness-of-fit tests
 
+
+Here we verify the calculations of expected counts for
+ballplayers by month (page 656).
 ```{r}
-# XX
+ballplayer <- c(137, 121, 116, 121, 126, 114, 
+                102, 165, 134, 115, 105, 122)
+national <- c(0.08, 0.07, 0.08, 0.08, 0.08, 0.08,
+              0.09, 0.09, 0.09, 0.09, 0.08, 0.09)
+n <- sum(~ ballplayer); n
+sum(~ national)
+expect <- n*national
+cbind(ballplayer, expect)
 ```
+
+The Chi-Square p-values in the table on the bottom of page 658 can be verified using the `xqt()` function.
+```{r}
+xqchisq(c(.90, .95, .975, .99, .995), df=1)
+```
+This matches the first row.  Other values can be calculated by changing the
+`df` argument.
+
+The goodness of fit test on page 659 can be verified by calculating the
+chi-square statistic.
+
+```{r}
+chisq <- sum((ballplayer-expect)^2/expect); chisq
+1-xpchisq(chisq, df=11)
+```
+
+### Section 24.2: Chi-square test of homogeneity
+
+Data from one university regarding
+the association between postgraduation activity and area of study
+is displayed in Table 24.1 (page 663).  
+
+```{r fig.height=5}
+area <- c(rep("agriculture", 209), rep("arts/science", 198), 
+          rep("engineering", 177), rep("ILR", 101),
+	  rep("agriculture", 104), rep("arts/science", 171), 
+          rep("engineering", 158), rep("ILR", 33),
+	  rep("agriculture", 135), rep("arts/science", 115), 
+          rep("engineering", 39), rep("ILR", 16))
+activity <- c(rep("Employed", 685), rep("Grad school", 466), 
+              rep("Other", 305))
+tally(~ activity + area, margins=TRUE)
+mosaicplot(tally(~ activity + area), main="mosaicplot of activity by area",
+  color=TRUE)
+xchisq.test(tally(~ activity + area))
+```
+
+### Section 24.3: Examining the residuals
+
+Note that the `xchisq.test()` function displays the standardized
+residuals as the last item in each cell of the table (and these
+match the results in Table 24.4 (page 668).  
