--- a/Chapter09.Rmd
+++ b/Chapter09.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "SDM4 in R: Understanding Randomness (Chapter 9)"
+title: "SDM4 in R: Re-expressing Data: Get it Straight! (Chapter 9)"
 author: "Patrick Frenett (pfrenett19@amherst.edu)"
-date: "June 21, 2016"
+date: "June 23, 2016"
 output: 
   pdf_document:
     fig_height: 3
@@ -44,18 +44,10 @@ file as well as the associated R Markdown reproducible analysis source file used
 
 This work leverages initiatives undertaken by Project MOSAIC (http://www.mosaic-web.org), an NSF-funded effort to improve the teaching of statistics, calculus, science and computing in the undergraduate curriculum. In particular, we utilize the `mosaic` package, which was written to simplify the use of R for introductory statistics courses. A short summary of the R needed to teach introductory statistics can be found in the mosaic package vignettes (http://cran.r-project.org/web/packages/mosaic).
 
-## Chapter 10: Understanding Randomness
+## Chapter 9: Re-expressing Data: Get it Straight!
 
-### Section 10.1: What is Randomness? 
+### Section 9.1: Straightening Scatterplots - The Four Goals
 
-### Section 10.2: Simulating by Hand
+### Section 9.2: Finding a Good Re-expression
 
-Bwplot from page 284.
 
-```{r}
-library(mosaic); library(readr)
-data <- c(5,4,7,5,18,6,5,4,6) 
-data$ID <- seq.int(nrow(data))
-
-bwplot(~data, data=data)
-```
