--- a/SDM4_Site/partVI.Rmd
+++ b/SDM4_Site/partVI.Rmd
@@ -11,10 +11,10 @@
 
 Title  | PDF File URL
 ------------- | -------------
-Chapter 22 : Comparing Groups | https://www3.amherst.edu/~nhorton/sdm4/Chapter22.pdf
-Chapter 23 : Paired Samples and Blocks | https://www3.amherst.edu/~nhorton/sdm4/Chapter23.pdf
-Chapter 24 : Comparing Counts | https://www3.amherst.edu/~nhorton/sdm4/Chapter24.pdf
-Chapter 25 : Inferences for Regression | https://www3.amherst.edu/~nhorton/sdm4/Chapter25.pdf
+Chapter 22 : Comparing Groups | https://www.amherst.edu/~nhorton/sdm4/Chapter22.pdf
+Chapter 23 : Paired Samples and Blocks | https://www.amherst.edu/~nhorton/sdm4/Chapter23.pdf
+Chapter 24 : Comparing Counts | https://www.amherst.edu/~nhorton/sdm4/Chapter24.pdf
+Chapter 25 : Inferences for Regression | https://www.amherst.edu/~nhorton/sdm4/Chapter25.pdf
 
 
 </br>
@@ -23,7 +23,7 @@ Chapter 25 : Inferences for Regression | https://www3.amherst.edu/~nhorton/sdm4/
 
 Title  | Rmd File URL
 ------------- | -------------
-Chapter 22 : Comparing Groups | https://www3.amherst.edu/~nhorton/sdm4/Chapter22.Rmd
-Chapter 23 : Paired Samples and Blocks | https://www3.amherst.edu/~nhorton/sdm4/Chapter23.Rmd
-Chapter 24 : Comparing Counts | https://www3.amherst.edu/~nhorton/sdm4/Chapter24.Rmd
-Chapter 25 : Inferences for Regression | https://www3.amherst.edu/~nhorton/sdm4/Chapter25.Rmd
+Chapter 22 : Comparing Groups | https://www.amherst.edu/~nhorton/sdm4/Chapter22.Rmd
+Chapter 23 : Paired Samples and Blocks | https://www.amherst.edu/~nhorton/sdm4/Chapter23.Rmd
+Chapter 24 : Comparing Counts | https://www.amherst.edu/~nhorton/sdm4/Chapter24.Rmd
+Chapter 25 : Inferences for Regression | https://www.amherst.edu/~nhorton/sdm4/Chapter25.Rmd
