--- a/Chapter10.Rmd
+++ b/Chapter10.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SDM4 in R: Understanding Randomness (Chapter 10)"
 author: "Nicholas Horton (nhorton@amherst.edu) and Patrick Frenett"
-date: "June 21, 2016"
+date: "June 27, 2016"
 output: 
   pdf_document:
     fig_height: 3
@@ -53,9 +53,10 @@ This work leverages initiatives undertaken by Project MOSAIC (http://www.mosaic-
 Shown below is the box and whisker plot from page 284.
 
 ```{r}
-library(mosaic); library(readr)
-data <- c(5,4,7,5,18,6,5,4,6) 
-data$ID <- seq.int(nrow(data))
+library(mosaic)
+obs <- c(5,4,7,5,18,6,5,4,6) 
+ID <- 1:length(data)
+data <- data.frame(ID, obs)
 
-bwplot(~data, data=data)
+bwplot(~obs, data=data)
 ```
