--- a/SDM4_Site/partIII.Rmd
+++ b/SDM4_Site/partIII.Rmd
@@ -12,8 +12,8 @@
 Title  | PDF File URL
 ------------- | -------------
 Chapter 10 : Understanding Randomness | https://www.amherst.edu/~nhorton/sdm4/Chapter10.pdf
-Chapter 11 : Sample Surveys | https://www.amherst.edu/~nhorton/sdm4/Chapter11.pdf
-Chapter 12 : Experiments and Observational Studies | https://www.amherst.edu/~nhorton/sdm4/Chapter12.pdf
+Chapter 11 : Sample Surveys | There was not a significant use of R in chapter 11
+Chapter 12 : Experiments and Observational Studies | There was not a significant use of R in chapter 12
 
 </br>
 <h4><right>.Rmd Files</right></h4>
@@ -22,5 +22,5 @@ Chapter 12 : Experiments and Observational Studies | https://www.amherst.edu/~nh
 Title  | Rmd File URL
 ------------- | -------------
 Chapter 10 : Understanding Randomness | https://www.amherst.edu/~nhorton/sdm4/Chapter10.Rmd
-Chapter 11 : Sample Surveys | https://www.amherst.edu/~nhorton/sdm4/Chapter11.Rmd
-Chapter 12 : Experiments and Observational Studies | https://www.amherst.edu/~nhorton/sdm4/Chapter12.Rmd
+Chapter 11 : Sample Surveys | There was not a significant use of R in chapter 11
+Chapter 12 : Experiments and Observational Studies | There was not a significant use of R in chapter 12
