--- a/SDM4_Site/about.Rmd
+++ b/SDM4_Site/about.Rmd
@@ -6,4 +6,4 @@ This work leverages initiatives undertaken by Project MOSAIC (http://www.mosaic-
 <br>
 These materials are made available under a creative commons remix with attribution license.
 <br>
-<p>[Nicholas J Horton](https://www.amherst.edu/people/facstaff/nhorton) & Patrick S Frenett (last updated August 12, 2017)</p>
+<p>[Nicholas J Horton](https://www.amherst.edu/people/facstaff/nhorton), Patrick S Frenett, and Sarah McDonald (last updated June 5, 2018)</p>
