--- a/SDM4_Site/other_resources.Rmd
+++ b/SDM4_Site/other_resources.Rmd
@@ -2,10 +2,15 @@
 title: Resources Related to the mosaic Package
 ---
 
-- Intro Stats in R (Frenett and Horton) describes how to undertake analyses in De Veaux, Velleman, and Bock's *Intro Stats* (4th edition).  These materials can be found at http://nhorton.people.amherst.edu/is4.
-- Introduction to the Practice of Statistics in R (NJ Horton and BS Baumer) describes how to undertake analyses in R that are introduced as examples in the first chapters of *Introduction to the Practice of Statistics* (6th edition), the excellent text by David Moore, George McCabe, and Bruce Craig. IPS in R can be found <a href="http://nhorton.people.amherst.edu/ips6e">here</a>
-- The Statistical Sleuth in R (NJ Horton) describes how to undertake analyses in R for the examples in the first 13 chapters of the Third Edition of the *Statistical Sleuth: A Course in Methods of Data Analysis* (2013), by Fred Ramsey and Dan Schafer. The materials can be found <a href="http://nhorton.people.amherst.edu/sleuth">here</a>
-- A paper describing the mosaic package *Less Volume, More Creativity* approach is available here: https://journal.r-project.org/archive/2017/RJ-2017-024
-- Additional mosaic-related resources and documentation are available at https://cran.r-project.org/web/packages/mosaic/vignettes/mosaic-resources.html
-- Additional mosaic package vignettes can be found at http://cran.r-project.org/web/packages/mosaic.
+- [Intro Stats in R](http://nhorton.people.amherst.edu/is4) (Frenett and Horton) describes how to undertake analyses in De Veaux, Velleman, and Bock's *Intro Stats* (4th edition).
+<br/>
+- [Introduction to the Practice of Statistics in R](http://nhorton.people.amherst.edu/ips6e) (NJ Horton and BS Baumer) describes how to undertake analyses in R that are introduced as examples in the first chapters of *Introduction to the Practice of Statistics* (6th edition), the excellent text by David Moore, George McCabe, and Bruce Craig.
+</br>
+- [The Statistical Sleuth in R](http://nhorton.people.amherst.edu/sleuth) (NJ Horton) describes how to undertake analyses in R for the examples in the first 13 chapters of the Third Edition of the *Statistical Sleuth: A Course in Methods of Data Analysis* (2013), by Fred Ramsey and Dan Schafer.
+</br>
+- A paper describing the mosaic package *Less Volume, More Creativity* approach is available [here](https://journal.r-project.org/archive/2017/RJ-2017-024)
+</br>
+- Additional mosaic-related resources and documentation are available [here](https://cran.r-project.org/web/packages/mosaic/vignettes/mosaic-resources.html)
+</br>
+- Additional mosaic package vignettes can be found at [here](http://cran.r-project.org/web/packages/mosaic).
 
